# gip

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  appveyor.yml  search-index.js
.cargo/: config
.github/: dependabot.yml
.github/workflows/: coverage.yml  regression.yml
gip/: enum.ProviderType.html  index.html  sidebar-items.js  struct.GlobalAddress.html  struct.ProviderAny.html  struct.ProviderInfo.html  struct.ProviderJson.html  struct.ProviderPlane.html  trait.Provider.html
implementors/core/fmt/: trait.Debug.js
implementors/gip/: trait.Provider.js
src/: gip.rs  lib.rs  main.rs
src/gip/: lib.rs.html
