[package]
name = "gip"
version = "0.6.1-pre"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/gip"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A library and command-line frontend to check global IP address"
categories = ["command-line-utilities", "network-programming"]
edition = "2018"

[badges]
travis-ci = { repository = "dalance/gip" }
codecov   = { repository = "dalance/gip", branch = "master", service = "github" }

[[bin]]
name = "gip"
path = "src/gip.rs"

[dependencies]
dirs            = "2.0"
error-chain     = "0.12.4"
rand            = "0.7"
regex           = "1"
serde           = "1.0.33"
serde_derive    = "1.0.33"
serde_json      = "1.0.12"
structopt       = "0.3"
time            = "0.1.39"
toml            = "0.5"

[dependencies.hyper]
version  = "0.9.10"
default-features = false

[package.metadata.release]
dev-version-ext            = "pre"
pre-release-commit-message = "Prepare to v{{version}}"
pro-release-commit-message = "Start next development iteration v{{version}}"
pre-release-replacements   = [
    { file = "README.md" , search = "gip = \"[a-z0-9\\.-]+\"", replace = "gip = \"{{version}}\"" },
    { file = "src/lib.rs", search = "gip = \"[a-z0-9\\.-]+\"", replace = "gip = \"{{version}}\"" },
]
tag-message                = "Bump version to {{version}}"
tag-prefix                 = ""
