[package]
name = "gip"
version = "0.7.2-pre"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/gip"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A library and command-line frontend to check global IP address"
categories = ["command-line-utilities", "network-programming"]
edition = "2021"

[badges]
travis-ci = { repository = "dalance/gip" }
codecov   = { repository = "dalance/gip", branch = "master", service = "github" }

[[bin]]
name = "gip"
path = "src/gip.rs"

[dependencies]
anyhow             = "1"
chrono             = "0.4"
dirs               = "6"
thiserror          = "2"
rand               = "0.8"
regex              = "1"
serde              = {version = "1.0", features = ["derive"]}
serde_json         = "1"
structopt          = "0.3"
toml               = "0.8"
trust-dns-resolver = "0.23"

[dependencies.reqwest]
version  = "0.12"
features = ["blocking"]

[package.metadata.release]
dev-version-ext             = "pre"
pre-release-commit-message  = "Prepare to v{{version}}"
post-release-commit-message = "Start next development iteration v{{version}}"
pre-release-replacements    = [
    { file = "README.md" , search = "gip = \"[a-z0-9\\.-]+\"", replace = "gip = \"{{version}}\"" },
    { file = "src/lib.rs", search = "gip = \"[a-z0-9\\.-]+\"", replace = "gip = \"{{version}}\"" },
]
tag-message                 = "Bump version to {{version}}"
tag-prefix                  = ""
